--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>zhihu-simple-client</title>
+    <link type="text/css" rel="stylesheet" href="//at.alicdn.com/t/font_582512_phwlgzho4t1yk3xr.css">
   </head>
   <body>
     <div id="app"></div>
