添加页面头部组件,添加按钮组件

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>zhihu-simple-client</title>
-    <link type="text/css" rel="stylesheet" href="//at.alicdn.com/t/font_582512_84sag11g9y0hpvi.css">
+    <link type="text/css" rel="stylesheet" href="//at.alicdn.com/t/font_582512_2xl4h6bf40xm9529.css">
+    <style>
+      html,body {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
