--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>zhihu-simple-client</title>
+    <link rel="shortcut icon" href="https://static.zhihu.com/static/favicon.ico" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="//at.alicdn.com/t/font_582512_kju0yu6iveipb9.css">
     <style>
       html,body {
